perf(qp2): copilot suggested performance improvements