@@ -2,6 +2,7 @@ package org.qcmg.qprofiler2.bam;
 
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
 
 import java.util.Arrays;
 import java.util.List;
@@ -26,16 +27,12 @@ public class PositionSummaryTest {
 		ps.addPosition(123458, rg1);
 		ps.addPosition(123459, rg1);
 		
-		assertEquals(123456, ps.getMin());
-		assertEquals(123459, ps.getMax());		
-		assertEquals(5, ps.getCoverageByRg(rgs.get(0)).get(0).get()); // bin1
+		assertEquals(5, ps.getCoverageByRg(rgs.getFirst()).get(0).get()); // bin1
 		
 		// add some smaller numbers
 		ps.addPosition(123, rg2);
 		ps.addPosition(456, rg2);
 		
-		assertEquals(123, ps.getMin());
-		assertEquals(123459, ps.getMax());
 		assertEquals(2, ps.getCoverageByRg(rgs.get(1)).get(0).get());  // bin0
 		assertEquals(5, ps.getCoverageByRg(rgs.get(0)).get(0).get());  // bin1
 	}
@@ -46,36 +43,27 @@ public class PositionSummaryTest {
 		PositionSummary ps = new PositionSummary(rgs);
 		
 		// add some positions to the summary obj
-		ps.addPosition(1,rg1);
-		ps.addPosition(1000000,rg2);
-		ps.addPosition(2000000,rg2);
-		ps.addPosition(3000000,rg2);
-		ps.addPosition(4000000,rg2);
-		
-		assertEquals(1, ps.getMin());
-		assertEquals(4000000, ps.getMax());
-
+		ps.addPosition(1, rg1);
+		ps.addPosition(1000000, rg2);
+		ps.addPosition(2000000, rg2);
+		ps.addPosition(3000000, rg2);
+		ps.addPosition(4000000, rg2);
 		
 		assertEquals(1,  ps.getCoverageByRg(rg2).get(2).get());
 		assertEquals(1,  ps.getCoverageByRg(rg2).get(3).get());
 		assertEquals(1,  ps.getCoverageByRg(rg2).get(4).get());
 		
 		// add some smaller numbers
-		ps.addPosition(0,rg3);
-		ps.addPosition(456,rg3);
+		ps.addPosition(0, rg3);
+		ps.addPosition(456, rg3);
 		
-		assertEquals(0, ps.getMin());
-		assertEquals(4000000, ps.getMax());
-		 
 		assertEquals(2, ps.getCoverageByRg(rg3).get(0).get());
 		assertEquals(1, ps.getCoverageByRg(rg1).get(0).get());
-		assertEquals(0, ps.getCoverageByRg(rg2).get(0).get());
-				
+        assertNull(ps.getCoverageByRg(rg2).get(0));
+
 		// and some larger numbers
-		ps.addPosition(2000002,rg1);
-		ps.addPosition(5000000,rg1);		
-		assertEquals(0, ps.getMin());
-		assertEquals(5000000, ps.getMax());
+		ps.addPosition(2000002, rg1);
+		ps.addPosition(5000000, rg1);
 
 		assertEquals(1, ps.getCoverageByRg(rg2).get(2).get());		
 	}
